# rust-yew-starter-boilerplate

./: Cargo.toml  README.md  index.html  package.json
src/: app.rs
